unpackaged/main/default/objects/InsideSocialConversation__c/InsideSocialConversation__c.object-meta.xml
<CustomObject>
    <description>Object that holds all INSIDE Social Conversations</description>
    <label>Inside Social Conversation</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inside Social Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>