unpackaged/main/default/objects/InsideSocialConversation__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Wait time in seconds that the Account/Contact waited before receiving the first Reply</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inside_Social_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>