unpackaged/main/default/objects/InsideSocialConversation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact associated with the Social Conversation</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inside Social Conversations</relationshipLabel>
    <relationshipName>InsideSocialConversations</relationshipName>
    <type>Lookup</type>
</CustomField>