unpackaged/main/default/objects/InsideSocialConversation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The Conversation Transcript or Description of the Social Conversation</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>