unpackaged/main/default/objects/InsideSocialConversation__c/fields/Started__c.field-meta.xml
<CustomField>
    <fullName>Started__c</fullName>
    <description>The Date/Time the Social Conversation Started</description>
    <label>Started</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>