unpackaged/main/default/objects/InsideSocialConversation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The Type of Social Conversation (i.e. Messenger, Text, Kakao, etc.)</description>
    <label>Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>